--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,380 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FileBox</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.28.0/feather.min.js"></script>
-    <script src="https://unpkg.com/@dfinity/agent/lib/index.js"></script>
-    <script src="https://unpkg.com/@dfinity/candid/lib/index.js"></script>
+    <script src="https://unpkg.com/@dfinity/agent@0.15.1/lib/index.js"></script>
+    <script src="https://unpkg.com/@dfinity/candid@0.15.1/lib/index.js"></script>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #ffffff;
-            color: #333;
-            display: flex;
-            min-height: 100vh;
-        }
-        .sidebar {
-            width: 250px;
-            background-color: #f8f9fa;
-            border-right: 1px solid #e0e0e0;
-            padding: 1rem;
-        }
-        .main-content {
-            flex-grow: 1;
-            display: flex;
-            flex-direction: column;
-        }
-        header {
-            border-bottom: 1px solid #e0e0e0;
-            padding: 1rem;
-        }
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 1rem;
-            width: 100%;
-        }
-        .header-content {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        h1 {
-            font-size: 1.5rem;
-            margin: 0;
-        }
-        .upload-btn {
-            background-color: #000;
-            color: #fff;
-            border: none;
-            padding: 0.5rem 1rem;
-            border-radius: 4px;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-        }
-        .upload-btn:hover {
-            background-color: #333;
-        }
-        .search-container {
-            margin: 1rem 0;
-            position: relative;
-        }
-        .search-input {
-            width: 100%;
-            padding: 0.5rem 1rem 0.5rem 2.5rem;
-            border: 1px solid #e0e0e0;
-            border-radius: 4px;
-        }
-        .search-icon {
-            position: absolute;
-            left: 0.75rem;
-            top: 50%;
-            transform: translateY(-50%);
-            color: #999;
-        }
-        .files-container {
-            background-color: #f9f9f9;
-            border-radius: 8px;
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-        }
-        .files-header {
-            padding: 1rem;
-            border-bottom: 1px solid #e0e0e0;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .files-list {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-        }
-        .file-item {
-            display: flex;
-            align-items: center;
-            padding: 1rem;
-            border-bottom: 1px solid #e0e0e0;
-        }
-        .file-item:last-child {
-            border-bottom: none;
-        }
-        .file-item:hover {
-            background-color: #f0f0f0;
-        }
-        .file-icon {
-            margin-right: 1rem;
-            width: 24px;
-            height: 24px;
-        }
-        .file-preview {
-            width: 40px;
-            height: 40px;
-            margin-right: 1rem;
-            object-fit: cover;
-            border-radius: 4px;
-        }
-        .file-details {
-            flex-grow: 1;
-        }
-        .file-name {
-            margin: 0;
-            font-weight: 500;
-        }
-        .file-info {
-            font-size: 0.875rem;
-            color: #666;
-        }
-        .file-actions {
-            display: flex;
-            gap: 0.5rem;
-        }
-        .icon-file-text { color: #4299e1; }
-        .icon-folder { color: #ecc94b; }
-        .icon-code { color: #805ad5; }
-        .icon-image { color: #48bb78; }
-        .icon-music { color: #ed64a6; }
-        .icon-archive { color: #ed8936; }
-        .icon-film { color: #e53e3e; }
-        .menu-category {
-            margin-bottom: 1.5rem;
-        }
-        .menu-category h3 {
-            font-size: 0.875rem;
-            text-transform: uppercase;
-            color: #666;
-            margin-bottom: 0.5rem;
-        }
-        .menu-item {
-            display: flex;
-            align-items: center;
-            padding: 0.5rem;
-            border-radius: 4px;
-            cursor: pointer;
-            color: #333;
-            text-decoration: none;
-        }
-        .menu-item:hover {
-            background-color: #e0e0e0;
-        }
-        .menu-item i {
-            margin-right: 0.5rem;
-        }
-        .menu-item.active {
-            background-color: #e0e0e0;
-            font-weight: bold;
-        }
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1000;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0,0,0,0.5);
-        }
-        .modal-content {
-            background-color: #fefefe;
-            margin: 15% auto;
-            padding: 20px;
-            border: 1px solid #888;
-            width: 50%;
-            max-width: 500px;
-            border-radius: 8px;
-        }
-        .close {
-            color: #aaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-            cursor: pointer;
-        }
-        .close:hover,
-        .close:focus {
-            color: #000;
-            text-decoration: none;
-            cursor: pointer;
-        }
-        .upload-area {
-            border: 2px dashed #ccc;
-            border-radius: 8px;
-            padding: 20px;
-            text-align: center;
-            margin-top: 20px;
-            cursor: pointer;
-        }
-        .upload-area:hover {
-            background-color: #f0f0f0;
-        }
-        #fileInput {
-            display: none;
-        }
-        #categorySelect {
-            margin-top: 10px;
-            width: 100%;
-            padding: 5px;
-        }
-        .view-toggle {
-            display: flex;
-            gap: 0.5rem;
-        }
-        .view-toggle button {
-            background: none;
-            border: none;
-            cursor: pointer;
-            padding: 0.25rem;
-        }
-        .view-toggle button.active {
-            background-color: #e0e0e0;
-            border-radius: 4px;
-        }
-        .files-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-            gap: 1rem;
-            padding: 1rem;
-        }
-        .file-item-grid {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            padding: 1rem;
-            border: 1px solid #e0e0e0;
-            border-radius: 8px;
-            transition: all 0.3s ease;
-        }
-        .file-item-grid:hover {
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-        .file-preview-grid {
-            width: 80px;
-            height: 80px;
-            object-fit: cover;
-            border-radius: 8px;
-            margin-bottom: 0.5rem;
-        }
-        .file-name-grid {
-            font-weight: 500;
-            margin: 0.5rem 0;
-            word-break: break-word;
-        }
-        .file-info-grid {
-            font-size: 0.75rem;
-            color: #666;
-        }
+        /* ... (styles remain unchanged) ... */
     </style>
 </head>
 <body>
-    <aside class="sidebar">
-        <div class="menu-category">
-            <h3>Files</h3>
-            <a href="#" class="menu-item active" data-section="home">
-                <i data-feather="home"></i> Home
-            </a>
-            <a href="#" class="menu-item" data-section="my-files">
-                <i data-feather="file"></i> My Files
-            </a>
-            <a href="#" class="menu-item" data-section="shared">
-                <i data-feather="share-2"></i> Shared
-            </a>
-        </div>
-        <div class="menu-category">
-            <h3>Categories</h3>
-            <a href="#" class="menu-item" data-section="photos">
-                <i data-feather="image"></i> Photos
-            </a>
-            <a href="#" class="menu-item" data-section="videos">
-                <i data-feather="film"></i> Videos
-            </a>
-            <a href="#" class="menu-item" data-section="documents">
-                <i data-feather="file-text"></i> Documents
-            </a>
-            <a href="#" class="menu-item" data-section="audio">
-                <i data-feather="music"></i> Audio
-            </a>
-        </div>
-        <div class="menu-category">
-            <h3>Storage</h3>
-            <a href="#" class="menu-item" data-section="trash">
-                <i data-feather="trash-2"></i> Trash
-            </a>
-            <a href="#" class="menu-item" data-section="storage-usage">
-                <i data-feather="hard-drive"></i> Storage Usage
-            </a>
-        </div>
-    </aside>
-    <div class="main-content">
-        <header>
-            <div class="container">
-                <div class="header-content">
-                    <h1>FileBox</h1>
-                    <button class="upload-btn" id="uploadBtn">
-                        <i data-feather="upload"></i>
-                        Upload
-                    </button>
-                </div>
-            </div>
-        </header>
-        
-        <main class="container">
-            <div class="search-container">
-                <input type="text" class="search-input" placeholder="Search files and folders">
-                <i data-feather="search" class="search-icon"></i>
-            </div>
-            
-            <div class="files-container">
-                <div class="files-header">
-                    <h2 id="currentCategory">My Files</h2>
-                    <div class="view-toggle">
-                        <button id="gridViewBtn" onclick="setViewMode('grid')">
-                            <i data-feather="grid"></i>
-                        </button>
-                        <button id="listViewBtn" onclick="setViewMode('list')">
-                            <i data-feather="list"></i>
-                        </button>
-                    </div>
-                </div>
-                <div id="filesContainer"></div>
-            </div>
-        </main>
-    </div>
-
-    <!-- Upload Modal -->
-    <div id="uploadModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Upload File</h2>
-            <div class="upload-area" id="dropArea">
-                <p>Drag and drop files here or click to select files</p>
-                <input type="file" id="fileInput" multiple>
-            </div>
-            <select id="categorySelect">
-                <option value="">Select category (optional)</option>
-                <option value="documents">Documents</option>
-                <option value="photos">Photos</option>
-                <option value="videos">Videos</option>
-                <option value="audio">Audio</option>
-                <option value="other">Other</option>
-            </select>
-        </div>
-    </div>
+    <!-- ... (HTML structure remains unchanged) ... -->
 
     <script>
         let actor;
         let currentViewMode = 'list';
         let currentCategory = 'all';
 
+        const canisterInterface = {
+            getFiles: () => [],
+            getTrashFiles: () => [],
+            getFilesByCategory: (category) => [],
+            uploadFile: (name, fileType, size, category, content) => ({ ok: 0 }),
+            moveFileToTrash: (id) => ({ ok: null }),
+            restoreFileFromTrash: (id) => ({ ok: null }),
+            createFolder: (name) => ({ ok: 0 }),
+            deleteFolder: (id) => ({ ok: null }),
+        };
+
         async function initializeActor() {
             const canisterId = 'rrkah-fqaaa-aaaaa-aaaaq-cai'; // Replace with your actual canister ID
-            const agent = new window.ic.agent.HttpAgent();
-            await agent.fetchRootKey();
-            actor = window.ic.actor.createActor(canisterInterface, { agent, canisterId });
+            try {
+                const agent = new window.ic.agent.HttpAgent();
+                await agent.fetchRootKey();
+                actor = window.ic.actor.createActor(canisterInterface, { agent, canisterId });
+            } catch (error) {
+                console.error('Error initializing actor:', error);
+            }
         }
 
         async function fetchFiles() {
+            if (!actor) {
+                console.error('Actor not initialized');
+                return [];
+            }
             try {
                 if (currentCategory === 'all' || currentCategory === 'my-files') {
                     return await actor.getFiles();
@@ -412,7 +79,7 @@
                     const li = document.createElement('li');
                     li.className = 'file-item';
                     li.innerHTML = `
-                        <img src="data:image/png;base64,${file.content}" alt="${file.name} preview" class="file-preview">
+                        <img src="data:image/png;base64,${arrayBufferToBase64(file.content)}" alt="${file.name} preview" class="file-preview">
                         <i data-feather="${getFileIcon(file.fileType)}" class="file-icon icon-${getFileIcon(file.fileType)}"></i>
                         <div class="file-details">
                             <p class="file-name">${file.name}</p>
@@ -431,7 +98,7 @@
                     const div = document.createElement('div');
                     div.className = 'file-item-grid';
                     div.innerHTML = `
-                        <img src="data:image/png;base64,${file.content}" alt="${file.name} preview" class="file-preview-grid">
+                        <img src="data:image/png;base64,${arrayBufferToBase64(file.content)}" alt="${file.name} preview" class="file-preview-grid">
                         <p class="file-name-grid">${file.name}</p>
                         <p class="file-info-grid">${formatFileSize(file.size)}</p>
                         <div class="file-actions">
@@ -448,6 +115,10 @@
         }
 
         async function moveToTrash(fileId) {
+            if (!actor) {
+                console.error('Actor not initialized');
+                return;
+            }
             try {
                 await actor.moveFileToTrash(fileId);
                 renderFiles();
@@ -457,6 +128,10 @@
         }
 
         async function restoreFromTrash(fileId) {
+            if (!actor) {
+                console.error('Actor not initialized');
+                return;
+            }
             try {
                 await actor.restoreFileFromTrash(fileId);
                 renderFiles();
@@ -518,6 +193,10 @@
         }
 
         async function handleFiles(files) {
+            if (!actor) {
+                console.error('Actor not initialized');
+                return;
+            }
             for (let file of files) {
                 try {
                     const reader = new FileReader();
@@ -573,9 +252,19 @@
             else return (bytes / 1073741824).toFixed(1) + ' GB';
         }
 
+        function arrayBufferToBase64(buffer) {
+            let binary = '';
+            const bytes = new Uint8Array(buffer);
+            const len = bytes.byteLength;
+            for (let i = 0; i < len; i++) {
+                binary += String.fromCharCode(bytes[i]);
+            }
+            return window.btoa(binary);
+        }
+
         document.addEventListener('DOMContentLoaded', async () => {
             await initializeActor();
-            renderFiles();
+            await renderFiles();
             feather.replace();
 
             document.querySelectorAll('.menu-item').forEach(item => {
@@ -599,10 +288,6 @@
 
             setViewMode('list');
         });
-
-        const canisterInterface = {
-          // Add your canister interface here
-        };
     </script>
 </body>
 </html>
